--- a/user-management-system/src/main/resources/application.properties
+++ b/user-management-system/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=Satya@007
+
+#Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto=create
